[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
name = "pallet-parachain-info"
version = "0.1.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.2", default-features = false, features = ["derive", "max-encoded-len"] }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false }

cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.9", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"cumulus-primitives-core/std",
	"frame-support/std",
	"frame-system/std",
]
