[package]
authors = ["Phala Network"]
edition = "2018"
name = "pallet-xcm-transfer"
version = '0.1.0'
license = "Apache 2.0"
homepage = "https://phala.network/"
repository = "https://github.com/Phala-Network/phala-blockchain"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.2", default-features = false, features = ["derive", "max-encoded-len"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

sp-std = { git = "https://github.com/paritytech/substrate", rev = "09c016ba0a77f00a662dcd6ea76e5a5c777f31f4", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "09c016ba0a77f00a662dcd6ea76e5a5c777f31f4", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", rev = "09c016ba0a77f00a662dcd6ea76e5a5c777f31f4", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", rev = "09c016ba0a77f00a662dcd6ea76e5a5c777f31f4", default-features = false }

xcm = { git = "https://github.com/paritytech/polkadot", rev = "63a4d8b420b06f410c446120d136fc3ec0c46b6a", default-features = false }

cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", rev = "102a1d5428cd7acc4913d7d64cfba83fa35144dd", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", rev = "102a1d5428cd7acc4913d7d64cfba83fa35144dd", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
	"cumulus-primitives-core/std",
	"frame-support/std",
	"frame-system/std",
]